force-app/main/default/objects/IpAddressAnomaly__c/IpAddressAnomaly__c.object-meta.xml
<CustomObject>
    <label>IP Address Anomaly</label>
    <nameField>
        <displayFormat>IPAA-{00000}</displayFormat>
        <label>IpAddressAnomaly Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP Address Anomalies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>