force-app/main/default/objects/IpAddressAnomaly__c/fields/EventIp__c.field-meta.xml
<CustomField>
    <fullName>EventIp__c</fullName>
    <description>The source IP address of the event. For example, 126.7.4.2.</description>
    <label>Event Ip</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>