force-app/main/default/objects/IpAddressAnomaly__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>EventType</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>