force-app/main/default/objects/IpAddressAnomaly__c/fields/LoginApplication__c.field-meta.xml
<CustomField>
    <fullName>LoginApplication__c</fullName>
    <description>Name of the app used to login, such as &quot;Salesforce for iOS&quot;, &quot;Salesforce CLI&quot;, etc.</description>
    <label>Login Application</label>
    <length>50</length>
    <type>Text</type>
</CustomField>