force-app/main/default/objects/IpAddressAnomaly__c/fields/LoginHistoryId__c.field-meta.xml
<CustomField>
    <fullName>LoginHistoryId__c</fullName>
    <description>Tracks a user session so you can correlate user activity with a particular series of report events. This field is also available on the LoginEvent, AuthSession, and LoginHistory objects, making it easier to trace events back to a user’s original authentication. This value is null if the event that was generated was from a dashboard refresh, a multi-block report, or a scheduled report. For example, 0YaB000002knVQLKA2.</description>
    <label>Login History Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>