force-app/main/default/objects/IpAddressAnomaly__c/fields/LoginIp__c.field-meta.xml
<CustomField>
    <fullName>LoginIp__c</fullName>
    <description>The source IP address of the client logging in. For example, 126.7.4.2.</description>
    <label>Login Ip</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>