force-app/main/default/objects/IpAddressAnomaly__c/fields/LoginKey__c.field-meta.xml
<CustomField>
    <fullName>LoginKey__c</fullName>
    <description>The string that ties together all events in a given user’s login session. The session starts with a login event and ends with either a logout event or the user session expiring. This value is null if the event that was generated was from a dashboard refresh, a multi-block report, or a scheduled report. For example, lUqjLPQTWRdvRG4.</description>
    <label>Login Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>