force-app/main/default/objects/IpAddressAnomaly__c/fields/LoginType__c.field-meta.xml
<CustomField>
    <fullName>LoginType__c</fullName>
    <description>The type of login used to access the session.
AppExchange–AppExchange
Application–Application
Certificate–Certificate-based login
ChatterCommunityPortalUnPwd–Chatter Communities External User
ChatterCommunityThirdPartySso–Chatter Communities External User Third Party SSO
EmployeeLoginToCommunity–Employee Login to Community
LightningLogin–Lightning Login
NetworksPortalApiOnly–Networks Portal API Only
Oauth, Remote Access Client–Remote Access Client
Oauth2, Remote Access 2.0–Remote Access 2.0
OtherApi–Other Apex API
Partner–Partner Product
PasswordlessLogin–Passwordless Login
Portal–Customer Service Portal
PrmPortalThirdPartySso–Partner Portal Third-Party SSO
PrmPortal–Partner Portal
Saml–SAML Idp Initiated SSO
SamlChatterNetworks–SAML Chatter Communities External User SSO
SamlCspPortal–SAML Customer Service Portal SSO
SamlPrmPortal–SAML Partner Portal SSO
SamlSite–SAML Site SSO
Saml2–SAML Sfdc Initiated SSO
SelfService–SelfService
ThirdPartySso–Third Party SSO</description>
    <label>Login Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>