force-app/main/default/objects/IpAddressAnomaly__c/fields/SessionKey__c.field-meta.xml
<CustomField>
    <fullName>SessionKey__c</fullName>
    <label>Session Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>