force-app/main/default/objects/IpAddressAnomaly__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the origin username in the format of user@company.com at the time the event was created.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IpAddressAnomolies</relationshipName>
    <type>Lookup</type>
</CustomField>