force-app/main/default/objects/IpAddressAnomaly__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>EventDate__c</columns>
    <columns>EventType__c</columns>
    <columns>EventIp__c</columns>
    <columns>LoginIp__c</columns>
    <columns>LoginApplication__c</columns>
    <columns>LoginType__c</columns>
    <columns>LoginDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>